2008-07-04  Richard M Kreuter <kreuter@progn.net>

	* swank-sbcl.lisp (code-location-source-location),
	(code-location-debug-source-name): Patched for incompatible
	structure change in SBCL 1.0.18.10.

2008-07-04  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-call-defun): Broken on DEFMETHOD forms. Fix
	that. Also, don't insert package qualifier anymore if the inserted
	qualifier is the same as the current REPL package.

2008-07-02  Martin Simmons <martin@lispworks.com>
	* swank-lispworks.lisp (install-debugger-globally): hook into the
	environment globally to catch BREAK.

2008-06-07  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (def-slime-test find-definition.2, arglist):
	SWANK:COMPILE-STRING-FOR-EMACS since recently takes 5 instead of 4
	parameters. Fix that.

2008-06-07  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-extract-context, slime-parse-context): Recognize
	more toplevel forms, e.g. DEFINE-COMPILER-MACRO &c. Such that
	`slime-parse-toplevel-form' will also recognize these.
	(slime-trace-query): Adapted to above changes. Errors if spec is
	untraceable.
	(slime-call-defun): Adapted to also support the new toplevel forms.

	(slime-cl-symbol-name),
	(slime-cl-symbol-package),
	(slime-qualify-cl-symbol-name): Resurrected from the `slime-parse'
	contrib, as they've been used by `slime-call-defun'.

2008-06-02  Raymond Toy <toy.raymond@gmail.com>

	Unicode support for CMUCL.

	* swank-cmucl.lisp (accept-connection, make-socket-io-stream):
	Handle external-format argument.
	(find-external-format): Implemented.
	(*external-format-to-coding-system*): New variable.

2008-05-19  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp: Don't require asdf.

2008-05-19  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (swank-compile-string): Add reader-conditionals
	for sb-ext::restrict-compiler-policy.

2008-05-19  Geo Carncross  <geocar@gmail.com>

	* contrib/swank-asdf.lisp: Require asdf.
